<resources>
    <string name="app_name">Spin Tracks</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Playlists</string>
    <string name="playlist_create_fragment_label">Create new playlist</string>
    <string name="songs_choose_fragment_label">Add songs to playlist</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="cancel">Cancel</string>

    <string name="no_playlists">You have no playlists</string>
    <string name="playlist_create_name">Enter a name for the playlist</string>
    <string name="playlist_default_name">Playlist 1</string>
    <string name="playlist_source_prompt">Select a source from which to import songs:</string>
    <string name="radio_btn_local">Local library (external storage)</string>
    <string name="add_to_playlist_btn">Add to playlist</string>
    <string name="finish_or_add_more_prompt">Are you done creating your playlist?</string>
    <string name="finish_playlist_btn">Yes, I\'m done</string>
    <string name="add_more_songs_btn">No, add more songs</string>
    <string name="start_playlist_btn">Start</string>
    <string name="choose_workout_type">Choose a workout type:</string>
    <string name="select_import_playlist">Select a playlist to import:</string>

    <string name="finish_workout_title">Good job!</string>
    <string name="return_to_menu">Return to menu</string>

</resources>
